--- a/anvil.yaml
+++ b/anvil.yaml
@@ -61,6 +61,9 @@ db_schema:
     - admin_ui: {width: 200}
       name: team
       type: string
+    - admin_ui: {order: 1, width: 200}
+      name: lock
+      type: bool
     server: full
     title: team
   trekning:
