--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -4,6 +4,11 @@ components:
     name: label_1
     properties: {role: headline, text: Endringslogg}
     type: Label
+  - layout_properties: {grid_position: 'TNZNYY,DKGSDY'}
+    name: text_area_3
+    properties:
+      text: "30/3: La til ikon for aktivitet\nLa til beskrivelse av aktivitet. Den vises som tooltip når musen er over en dag. Vises ikek på mobil da den ikke har mus. "
+    type: TextArea
   - layout_properties: {grid_position: 'ILDDNC,ZIRYPF'}
     name: text_area_1
     properties:
@@ -15,6 +20,16 @@ components:
     properties:
       height: 156.39999389648438
       text: "28/3-25: La inn checkboks på brukerliste i admin for å kunne gi admintilgang til brukere\nLaget endringslogg\nLink til innmeldingsskjema i siden med Regler\nRettet feil i trekningsliste. Den inkluderte deltagere som hadde hatt fem dager og avregistrert dager sånn at de ikke skal være med likevel. \nVisuelle enringer\n"
+    type: TextArea
+  - layout_properties: {grid_position: 'LAFSXU,NDNNGT'}
+    name: label_2
+    properties: {role: headline, text: Kjente feil og mangler}
+    type: Label
+  - layout_properties: {grid_position: 'ZHCDTP,UZQHEX'}
+    name: text_area_4
+    properties:
+      height: 157.3636474609375
+      text: "Nå man redigerer en dag som har ikon må ikonet velges på nytt, ellers forsvinner det. Poeng og tekster bevares.\nTrenger en liste over eget lag med meldemmer og deres poeng. \nMå kunne låse et lag for påmelding av flere\nTrenger å finne flere og riktigere ikoner\nBør kunne redigere en dag ved å klikke hvor som helst i dagen, ikek bare på poengtallet\nHeadingen kan designes bedre, med navn og tid for konkurransen."
     type: TextArea
   - event_bindings: {click: button_1_click}
     layout_properties: {grid_position: 'RUNMFH,GYRFVX'}
