Created relax.png; Edited settings, endringslogg and Loggbok

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,6 +1,7 @@
 unique_ids:
   assets:
     lykkehjul.jpg: '174227380325212014709124.972933'
+    relax.png: '1743409632679138225943962.50644'
     standard-page.html: FWNBRYTQ5FYKRMFR5TQCDTKGH36EROKJ
     theme.css: 4XELZEEUTVXOLQDXMJPQ3IRQPNKSRQ3I
     walking.svg: '1743356575598423980038540.64557'
