--- a/anvil.yaml
+++ b/anvil.yaml
@@ -16,24 +16,24 @@ db_schema:
       name: deltager
       target: users
       type: link_single
-    - admin_ui: {order: 5, width: 200}
-      name: beskrivelse
-      type: string
-    - admin_ui: {order: 4, width: 200}
+    - admin_ui: {width: 200}
       name: ikon
       type: media
+    - admin_ui: {width: 200}
+      name: beskrivelse
+      type: string
     server: full
     title: Aktivitet
   files:
     client: search
     columns:
-    - admin_ui: {order: 0, width: 200}
+    - admin_ui: {width: 200}
       name: path
       type: string
-    - admin_ui: {order: 1, width: 200}
+    - admin_ui: {width: 200}
       name: file
       type: media
-    - admin_ui: {order: 2, width: 200}
+    - admin_ui: {width: 200}
       name: file_version
       type: string
     server: full
@@ -61,6 +61,9 @@ db_schema:
     - admin_ui: {width: 200}
       name: team
       type: string
+    - admin_ui: {width: 200}
+      name: lock
+      type: bool
     server: full
     title: team
   trekning:
