--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -6,7 +6,8 @@ components:
     type: Label
   - layout_properties: {grid_position: 'QPJPEQ,XYFIZA'}
     name: text_area_5
-    properties: {text: '31/3: Nå kan bruker ikke velge team som er låst. Låsing er ikke med i admin brukergresesnitt enda, men må gjøres rett i basen foreløpig. Team Andeby er låst. '}
+    properties:
+      text: "31/3: Nå kan bruker ikke velge team som er låst. Låsing er ikke med i admin brukergresesnitt enda, men må gjøres rett i basen foreløpig. Team Andeby er låst. \nLa til tekst \"Hviledag\" på passive dager"
     type: TextArea
   - layout_properties: {grid_position: 'TNZNYY,DKGSDY'}
     name: text_area_3
