--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -103,17 +103,17 @@ components:
     type: ColumnPanel
   - components:
     - components:
-      - event_bindings: {click: button_2_click}
+      - event_bindings: {click: prev_week_button_click}
         layout_properties: {}
-        name: button_2
+        name: prev_week_button
         properties: {background: 'theme:Secondary Container', icon: 'fa:long-arrow-left', role: elevated-button, text: ''}
         type: Button
       - name: uke_label
         properties: {align: center, bold: true, role: title, text: 'Uke 20: 12 - 18 mai'}
         type: Label
-      - event_bindings: {click: button_1_click}
+      - event_bindings: {click: next_week_button_click}
         layout_properties: {}
-        name: button_1
+        name: next_week_button
         properties: {background: 'theme:Secondary Container', icon: 'fa:long-arrow-right', role: elevated-button, text: ''}
         type: Button
       layout_properties: {}
