--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -38,21 +38,46 @@ components:
     - components:
       - layout_properties: {}
         name: konkurransenavn
-        properties: {align: center}
+        properties:
+          align: center
+          role: title
+          spacing:
+            margin: ['0', null, '0', null]
+            padding: ['0', null, '0', null]
         type: Label
       - layout_properties: {}
         name: label_3
-        properties: {text: fra}
+        properties:
+          role: title
+          spacing:
+            margin: ['0', null, '0', null]
+            padding: ['0', null, '0', null]
+          text: fra
         type: Label
-      - name: fradato
-        properties: {}
+      - layout_properties: {}
+        name: fradato
+        properties:
+          role: title
+          spacing:
+            margin: ['0', null, '0', null]
+            padding: ['0', null, '0', null]
         type: Label
       - layout_properties: {}
         name: label_4
-        properties: {text: til}
+        properties:
+          role: title
+          spacing:
+            margin: ['0', null, '0', null]
+            padding: ['0', null, '0', null]
+          text: til
         type: Label
-      - name: tildato
-        properties: {}
+      - layout_properties: {}
+        name: tildato
+        properties:
+          role: title
+          spacing:
+            margin: ['0', null, null, null]
+            padding: ['0', null, null, null]
         type: Label
       layout_properties: {grid_position: 'VRDIEX,CGEKVQ'}
       name: flow_panel_9
@@ -61,7 +86,10 @@ components:
     - components:
       - layout_properties: {}
         name: lykkehjul
-        properties: {height: 50.79998779296875, source: _/theme/lykkehjul.jpg}
+        properties:
+          height: 50.79998779296875
+          margin: ['0', null, '0', null]
+          source: _/theme/lykkehjul.jpg
         type: Image
       - components:
         - layout_properties: {}
@@ -91,7 +119,10 @@ components:
         type: FlowPanel
       layout_properties: {grid_position: 'RFCGDJ,QULDBO'}
       name: flow_panel_3
-      properties: {align: center}
+      properties:
+        align: center
+        spacing:
+          margin: ['0', null, '0', null]
       type: FlowPanel
     layout_properties: {grid_position: 'WFKNPD,TTQPQG'}
     name: outlined_card_2
