--- a/client_code/PoengVelger/form_template.yaml
+++ b/client_code/PoengVelger/form_template.yaml
@@ -38,6 +38,52 @@ components:
         name: flow_panel_8
         properties: {align: center}
         type: FlowPanel
+      - components:
+        - components:
+          - layout_properties: {grid_position: 'DTSQLA,NDUWGZ'}
+            name: label_3
+            properties: {text: Skriv type aktivitet eller velg et ikon som passer}
+            type: Label
+          - components:
+            - name: label_2
+              properties: {text: 'Aktivitet:'}
+              type: Label
+            - layout_properties: {width: 132.14285278320312}
+              name: aktivitet_box
+              properties: {}
+              type: TextBox
+            - event_bindings: {change: ikon_dropdown_change}
+              name: ikon_dropdown
+              properties: {}
+              type: DropDown
+            layout_properties: {grid_position: 'YISWBH,BAXIOP'}
+            name: flow_panel_2
+            properties: {}
+            type: FlowPanel
+          name: column_panel_2
+          properties: {}
+          type: ColumnPanel
+        - layout_properties: {width: 71.85711669921875}
+          name: ikon_preview
+          properties: {height: 61.714263916015625}
+          type: Image
+        layout_properties: {grid_position: 'ZFFFAT,TWLSIX'}
+        name: flow_panel_4
+        properties: {align: center}
+        type: FlowPanel
+      - components:
+        - layout_properties: {grid_position: 'VZQZVR,ZKWIOM'}
+          name: label_4
+          properties: {text: Her kan du skrive en lengre beskrivelse hvis du ønsker}
+          type: Label
+        - layout_properties: {grid_position: 'SSGWTO,FIHUKR'}
+          name: beskrivelse
+          properties: {height: 49.7142333984375}
+          type: TextArea
+        layout_properties: {grid_position: 'HLMYBC,AIRTPG'}
+        name: column_panel_3
+        properties: {}
+        type: ColumnPanel
       layout_properties: {grid_position: 'RVIUTL,JORSMI'}
       name: outlined_card_1_copy
       properties: {background: 'theme:Secondary Container', role: elevated-card}
@@ -45,47 +91,6 @@ components:
     layout_properties: {grid_position: 'RBCWIU,QASPLX'}
     name: column_panel_1
     properties: {}
-    type: ColumnPanel
-  - components:
-    - layout_properties: {grid_position: 'QIMZPM,XKLNPF'}
-      name: label_3
-      properties: {text: Skriv type aktivitet eller velg et ikon som passer}
-      type: Label
-    - components:
-      - name: label_2
-        properties: {text: 'Aktivitet:'}
-        type: Label
-      - name: aktivitet_box
-        properties: {}
-        type: TextBox
-      - event_bindings: {change: ikon_dropdown_change}
-        name: ikon_dropdown
-        properties: {}
-        type: DropDown
-      - layout_properties: {width: 56}
-        name: ikon_preview
-        properties: {height: 52.33331298828125}
-        type: Image
-      layout_properties: {grid_position: 'WUZFZR,JBUQBZ'}
-      name: flow_panel_2
-      properties: {}
-      type: FlowPanel
-    layout_properties: {grid_position: 'ERIXPL,MZZXBH'}
-    name: outlined_card_2
-    properties: {background: 'theme:Secondary Container', role: elevated-card}
-    type: ColumnPanel
-  - components:
-    - layout_properties: {grid_position: 'OMDRPU,DVZEUW'}
-      name: label_4
-      properties: {text: Her kan du skrive en lengre beskrivelse hvis du ønsker}
-      type: Label
-    - layout_properties: {grid_position: 'PCTGWS,ZZZZZE'}
-      name: beskrivelse
-      properties: {height: 77}
-      type: TextArea
-    layout_properties: {grid_position: 'UBKQHZ,LIRJYT'}
-    name: outlined_card_3
-    properties: {background: 'theme:Secondary Container', role: outlined-card}
     type: ColumnPanel
   - components:
     - event_bindings: {click: lagre_button_click}
