--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -35,7 +35,7 @@ components:
     name: text_area_4
     properties:
       height: 174.63641357421875
-      text: "Nå man redigerer en dag som har ikon må ikonet velges på nytt, ellers forsvinner det. Poeng og tekster bevares.\nTrenger en liste over eget lag med meldemmer og deres poeng. \nTrenger å finne flere og riktigere ikoner\nBør kunne redigere en dag ved å klikke hvor som helst i dagen, ikek bare på poengtallet"
+      text: "Trenger en liste over eget lag med meldemmer og deres poeng. \nBør kunne redigere en dag ved å klikke hvor som helst i dagen, ikek bare på poengtallet"
     type: TextArea
   - event_bindings: {click: button_1_click}
     layout_properties: {grid_position: 'RUNMFH,GYRFVX'}
