--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -175,7 +175,8 @@ components:
               padding: ['0', '0', '0', '0']
             text: '0'
           type: Button
-        - layout_properties: {grid_position: 'BUEXBD,JKJSLR'}
+        - event_bindings: {}
+          layout_properties: {grid_position: 'BUEXBD,JKJSLR'}
           name: man_ikon
           properties:
             display_mode: shrink_to_fit
@@ -226,7 +227,8 @@ components:
               padding: ['0', '12', '0', '12']
             text: '0'
           type: Button
-        - layout_properties: {grid_position: 'ITOHFN,CSAUSV'}
+        - event_bindings: {}
+          layout_properties: {grid_position: 'ITOHFN,CSAUSV'}
           name: tir_ikon
           properties:
             height: '32'
@@ -272,7 +274,8 @@ components:
               padding: ['0', '12', '0', '12']
             text: '0'
           type: Button
-        - layout_properties: {grid_position: 'AEDULU,BYYDDZ'}
+        - event_bindings: {}
+          layout_properties: {grid_position: 'AEDULU,BYYDDZ'}
           name: ons_ikon
           properties:
             height: '32'
@@ -318,7 +321,8 @@ components:
               padding: ['0', '12', '0', '12']
             text: '0'
           type: Button
-        - layout_properties: {grid_position: 'NKUVYK,IJXQBK'}
+        - event_bindings: {}
+          layout_properties: {grid_position: 'NKUVYK,IJXQBK'}
           name: tor_ikon
           properties:
             height: '32'
@@ -369,7 +373,8 @@ components:
               padding: ['0', '12', '0', '12']
             text: '0'
           type: Button
-        - layout_properties: {grid_position: 'HFGYCY,CTAMUA'}
+        - event_bindings: {}
+          layout_properties: {grid_position: 'HFGYCY,CTAMUA'}
           name: fre_ikon
           properties:
             height: '32'
@@ -415,7 +420,8 @@ components:
               padding: ['0', '12', '0', '12']
             text: '0'
           type: Button
-        - layout_properties: {grid_position: 'MLYHRM,IXIQOA'}
+        - event_bindings: {}
+          layout_properties: {grid_position: 'MLYHRM,IXIQOA'}
           name: lor_ikon
           properties:
             height: '32'
@@ -461,7 +467,8 @@ components:
               padding: ['0', '12', '0', '12']
             text: '0'
           type: Button
-        - layout_properties: {grid_position: 'NTOGHO,MCIKOC'}
+        - event_bindings: {}
+          layout_properties: {grid_position: 'NTOGHO,MCIKOC'}
           name: son_ikon
           properties:
             height: '32'
