--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -33,9 +33,7 @@ components:
     type: Label
   - layout_properties: {grid_position: 'ZHCDTP,UZQHEX'}
     name: text_area_4
-    properties:
-      height: 174.63641357421875
-      text: "Trenger en liste over eget lag med meldemmer og deres poeng. \nBør kunne redigere en dag ved å klikke hvor som helst i dagen, ikek bare på poengtallet"
+    properties: {height: 174.63641357421875, text: 'Bør kunne redigere en dag ved å klikke hvor som helst i dagen, ikek bare på poengtallet'}
     type: TextArea
   - event_bindings: {click: button_1_click}
     layout_properties: {grid_position: 'RUNMFH,GYRFVX'}
