--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -3,7 +3,7 @@ components:
   - event_bindings: {click: login_click}
     layout_properties: {grid_position: 'MPVRLL,VGDAAJ'}
     name: login
-    properties: {background: 'theme:Tertiary Container', role: outlined-button, text: Logg inn}
+    properties: {background: 'theme:Tertiary Container', role: null, text: Logg inn}
     type: Button
   - components:
     - components:
@@ -31,7 +31,7 @@ components:
     type: Label
   layout_properties: {grid_position: 'ACRWCP,DAEMHS'}
   name: login_card
-  properties: {background: 'theme:Secondary Container', role: outlined-card}
+  properties: {background: '', role: null}
   type: ColumnPanel
 - components:
   - components:
@@ -127,8 +127,8 @@ components:
     layout_properties: {grid_position: 'WFKNPD,TTQPQG'}
     name: outlined_card_2
     properties:
-      background: theme:Secondary Container
-      role: elevated-card
+      background: ''
+      role: null
       spacing:
         padding: ['2', null, '2', null]
     type: ColumnPanel
@@ -137,7 +137,7 @@ components:
       - event_bindings: {click: prev_week_button_click}
         layout_properties: {}
         name: prev_week_button
-        properties: {background: 'theme:Secondary Container', icon: 'fa:long-arrow-left', role: elevated-button, text: ''}
+        properties: {background: 'theme:Secondary Container', icon: 'fa:long-arrow-left', role: null, text: ''}
         type: Button
       - name: uke_label
         properties: {align: center, bold: true, role: title, text: 'Uke 20: 12 - 18 mai'}
@@ -145,7 +145,7 @@ components:
       - event_bindings: {click: next_week_button_click}
         layout_properties: {}
         name: next_week_button
-        properties: {background: 'theme:Secondary Container', icon: 'fa:long-arrow-right', role: elevated-button, text: ''}
+        properties: {background: 'theme:Secondary Container', icon: 'fa:long-arrow-right', role: null, text: ''}
         type: Button
       layout_properties: {}
       name: flow_panel_2
@@ -157,7 +157,7 @@ components:
           name: man_label
           properties:
             align: center
-            font_size: 10
+            font_size: null
             spacing:
               margin: [null, null, '0', null]
               padding: [null, null, '0', null]
@@ -169,10 +169,10 @@ components:
           name: man_button
           properties:
             font_size: 25
-            foreground: black
+            foreground: ''
             spacing:
               margin: ['0', null, '0', null]
-              padding: ['0', '0', '0', '0']
+              padding: ['0', '12', '0', '12']
             text: '0'
           type: Button
         - event_bindings: {}
@@ -190,7 +190,7 @@ components:
           name: man_akt_label
           properties:
             align: center
-            font_size: 8
+            font_size: 10
             spacing:
               margin: ['0', null, '0', null]
               padding: ['0', null, '0', null]
@@ -210,7 +210,7 @@ components:
           name: tir_label
           properties:
             align: center
-            font_size: 10
+            font_size: null
             spacing:
               margin: [null, null, '0', null]
               padding: [null, null, '0', null]
@@ -221,7 +221,7 @@ components:
           name: tir_button
           properties:
             font_size: 25
-            foreground: black
+            foreground: ''
             spacing:
               margin: ['0', null, null, null]
               padding: ['0', '12', '0', '12']
@@ -238,7 +238,7 @@ components:
           name: tir_akt_label
           properties:
             align: center
-            font_size: 8
+            font_size: 10
             spacing:
               margin: ['0', null, '0', null]
               padding: ['0', null, '0', null]
@@ -257,7 +257,7 @@ components:
           name: ons_label
           properties:
             align: center
-            font_size: 10
+            font_size: null
             spacing:
               margin: [null, null, '0', null]
               padding: [null, null, '0', null]
@@ -268,7 +268,7 @@ components:
           name: ons_button
           properties:
             font_size: 25
-            foreground: black
+            foreground: ''
             spacing:
               margin: ['0', null, null, null]
               padding: ['0', '12', '0', '12']
@@ -285,7 +285,7 @@ components:
           name: ons_akt_label
           properties:
             align: center
-            font_size: 8
+            font_size: 10
             spacing:
               margin: ['0', null, '0', null]
               padding: ['0', null, '0', null]
@@ -304,7 +304,7 @@ components:
           name: tor_label
           properties:
             align: center
-            font_size: 10
+            font_size: null
             spacing:
               margin: [null, null, '0', null]
               padding: [null, null, '0', null]
@@ -315,7 +315,7 @@ components:
           name: tor_button
           properties:
             font_size: 25
-            foreground: black
+            foreground: ''
             spacing:
               margin: ['0', null, null, null]
               padding: ['0', '12', '0', '12']
@@ -332,7 +332,7 @@ components:
           name: tor_akt_label
           properties:
             align: center
-            font_size: 8
+            font_size: 10
             spacing:
               margin: ['0', null, '0', null]
               padding: ['0', null, '0', null]
@@ -356,7 +356,7 @@ components:
           name: fre_label
           properties:
             align: center
-            font_size: 10
+            font_size: null
             spacing:
               margin: [null, null, '0', null]
               padding: [null, null, '0', null]
@@ -367,7 +367,7 @@ components:
           name: fre_button
           properties:
             font_size: 25
-            foreground: black
+            foreground: ''
             spacing:
               margin: ['0', null, null, null]
               padding: ['0', '12', '0', '12']
@@ -384,7 +384,7 @@ components:
           name: fre_akt_label
           properties:
             align: center
-            font_size: 8
+            font_size: 10
             spacing:
               margin: ['0', null, '0', null]
               padding: ['0', null, '0', null]
@@ -403,7 +403,7 @@ components:
           name: lor_label
           properties:
             align: center
-            font_size: 10
+            font_size: null
             spacing:
               margin: [null, null, '0', null]
               padding: [null, null, '0', null]
@@ -414,7 +414,7 @@ components:
           name: lor_button
           properties:
             font_size: 25
-            foreground: black
+            foreground: ''
             spacing:
               margin: ['0', null, null, null]
               padding: ['0', '12', '0', '12']
@@ -431,7 +431,7 @@ components:
           name: lor_akt_label
           properties:
             align: center
-            font_size: 8
+            font_size: 10
             spacing:
               margin: ['0', null, '0', null]
               padding: ['0', null, '0', null]
@@ -450,7 +450,7 @@ components:
           name: son_label
           properties:
             align: center
-            font_size: 10
+            font_size: null
             spacing:
               margin: [null, null, '0', null]
               padding: [null, null, '0', null]
@@ -461,7 +461,7 @@ components:
           name: son_button
           properties:
             font_size: 25
-            foreground: black
+            foreground: ''
             spacing:
               margin: ['0', null, null, null]
               padding: ['0', '12', '0', '12']
@@ -478,7 +478,7 @@ components:
           name: son_akt_label
           properties:
             align: center
-            font_size: 8
+            font_size: 10
             spacing:
               margin: ['0', null, '0', null]
               padding: ['0', null, '0', null]
@@ -504,40 +504,41 @@ components:
     - event_bindings: {click: regler_button_click}
       layout_properties: {}
       name: regler_button
-      properties: {background: 'theme:Secondary Container', role: elevated-button, text: Regler}
+      properties: {background: 'theme:Secondary Container', role: null, text: Regler}
       type: Button
     - event_bindings: {click: veil_button_click}
       layout_properties: {}
       name: veil_button
-      properties: {background: 'theme:Secondary Container', role: elevated-button, text: Brukerveiledning}
+      properties: {background: 'theme:Secondary Container', role: null, text: Brukerveiledning}
       type: Button
     - event_bindings: {click: individuell_button_click}
       layout_properties: {}
       name: individuell_button
       properties:
         background: theme:Secondary Container
-        role: elevated-button
+        role: null
         text: |
           Individuell
       type: Button
     - event_bindings: {click: team_button_click}
       layout_properties: {}
       name: team_button
-      properties: {background: 'theme:Secondary Container', role: elevated-button, text: Team}
+      properties: {background: 'theme:Secondary Container', role: null, text: Team}
       type: Button
     - event_bindings: {click: trekning_button_click}
       layout_properties: {}
       name: trekning_button
-      properties: {background: 'theme:Secondary Container', role: elevated-button, text: Trekningsliste}
+      properties: {background: 'theme:Secondary Container', role: null, text: Trekningsliste}
       type: Button
     - event_bindings: {click: admin_button_click}
+      layout_properties: {}
       name: admin_button
-      properties: {background: 'theme:Secondary Container', role: elevated-button, text: Admin, visible: false}
+      properties: {background: 'theme:Secondary Container', role: null, text: Admin, visible: false}
       type: Button
     - event_bindings: {click: logout_click}
       layout_properties: {}
       name: logout
-      properties: {align: center, background: 'theme:Secondary Container', role: elevated-button, text: Logg ut}
+      properties: {align: center, background: 'theme:Secondary Container', role: null, text: Logg ut}
       type: Button
     layout_properties: {grid_position: 'ZPVSNA,WTSZQB'}
     name: flow_panel_7
