--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -4,6 +4,10 @@ components:
     name: label_1
     properties: {role: headline, text: Endringslogg}
     type: Label
+  - layout_properties: {grid_position: 'JFAYHJ,EVWNIP'}
+    name: text_area_6
+    properties: {text: '4/4: La inn mer hjelpetekst om team. '}
+    type: TextArea
   - layout_properties: {grid_position: 'QPJPEQ,XYFIZA'}
     name: text_area_5
     properties:
@@ -33,7 +37,11 @@ components:
     type: Label
   - layout_properties: {grid_position: 'ZHCDTP,UZQHEX'}
     name: text_area_4
-    properties: {height: 174.63641357421875, text: 'Bør kunne redigere en dag ved å klikke hvor som helst i dagen, ikek bare på poengtallet'}
+    properties:
+      height: 174.63641357421875
+      text: |-
+        Bør kunne redigere en dag ved å klikke hvor som helst i dagen, ikke bare på poengtallet.
+        Bør vi kunne se alle ikonene på en gang i stedet for en drop down?
     type: TextArea
   - event_bindings: {click: button_1_click}
     layout_properties: {grid_position: 'RUNMFH,GYRFVX'}
