--- a/client_code/IkonPickerForm/form_template.yaml
+++ b/client_code/IkonPickerForm/form_template.yaml
@@ -1,5 +1,10 @@
 components:
-- layout_properties: {grid_position: 'MTWYZC,CALNYS'}
+- components:
+  - layout_properties: {col_xs: 5, row: MXVMVW, width_xs: 4}
+    name: repeating_panel_1
+    properties: {item_template: IkonPickerForm.ItemTemplate2}
+    type: RepeatingPanel
+  layout_properties: {grid_position: 'MTWYZC,CALNYS'}
   name: grid_panel_1
   properties: {}
   type: GridPanel
