--- a/client_code/IconPickerForm/form_template.yaml
+++ b/client_code/IconPickerForm/form_template.yaml
@@ -2,7 +2,7 @@ components:
 - components:
   - layout_properties: {col_xs: 5, row: MXVMVW, width_xs: 4}
     name: repeating_panel_1
-    properties: {item_template: IkonPickerForm.ItemTemplate2}
+    properties: {item_template: IconPickerForm.ItemTemplate2}
     type: RepeatingPanel
   layout_properties: {grid_position: 'MTWYZC,CALNYS'}
   name: grid_panel_1
