Created IconPickerFOrm.ItemTemplate1 and IconPickerFOrm; Edited PoengVelger; Deleted IconPickerForm, IconPickerForm.ItemTemplate2 and IconPickerForm.ItemTemplate1

--- a/client_code/IconPickerFOrm/ItemTemplate1/form_template.yaml
+++ b/client_code/IconPickerFOrm/ItemTemplate1/form_template.yaml
@@ -1,6 +1,5 @@
 components:
-- event_bindings: {mouse_down: image_1_mouse_down}
-  layout_properties: {grid_position: 'JIWGHK,XDLJCW'}
+- layout_properties: {grid_position: 'ZGQCON,NUJGMU'}
   name: image_1
   properties: {height: '50'}
   type: Image
