--- a/anvil.yaml
+++ b/anvil.yaml
@@ -22,6 +22,9 @@ db_schema:
     - admin_ui: {width: 200}
       name: beskrivelse
       type: string
+    - admin_ui: {width: 200}
+      name: ikon_path
+      type: string
     server: full
     title: Aktivitet
   files:
@@ -95,6 +98,9 @@ db_schema:
     - admin_ui: {width: 200}
       name: admin
       type: bool
+    - admin_ui: {width: 200}
+      name: week_offset
+      type: number
     server: full
     title: userinfo
   users:
