--- a/anvil.yaml
+++ b/anvil.yaml
@@ -82,7 +82,7 @@ db_schema:
     server: full
     title: Trekning
   userinfo:
-    client: none
+    client: search
     columns:
     - admin_ui: {width: 200}
       name: user
