--- a/anvil.yaml
+++ b/anvil.yaml
@@ -98,7 +98,7 @@ db_schema:
     - admin_ui: {width: 200}
       name: admin
       type: bool
-    - admin_ui: {width: 200}
+    - admin_ui: {order: 4, width: 107}
       name: week_offset
       type: number
     server: full
