--- a/client_code/VelgIkon/form_template.yaml
+++ b/client_code/VelgIkon/form_template.yaml
@@ -1,4 +1,8 @@
 components:
+- layout_properties: {grid_position: 'GGUHTM,VFFSJF'}
+  name: image_1
+  properties: {}
+  type: Image
 - components:
   - layout_properties: {grid_position: 'LCVHKF,UYMYRR'}
     name: ikon_repeating_panel
