Edited VelgIkon, PoengVelger and VelgIkon.ItemTemplate1

--- a/client_code/VelgIkon/ItemTemplate1/form_template.yaml
+++ b/client_code/VelgIkon/ItemTemplate1/form_template.yaml
@@ -1,19 +1,22 @@
 components:
 - components:
-  - event_bindings: {}
+  - event_bindings: {mouse_down: image_click}
     layout_properties: {width: 60}
     name: image_1
     properties: {height: '60'}
     type: Image
-  - layout_properties: {width: 60}
+  - event_bindings: {mouse_down: image_click}
+    layout_properties: {width: 60}
     name: image_2
     properties: {height: '60'}
     type: Image
-  - layout_properties: {width: 60}
+  - event_bindings: {mouse_down: image_click}
+    layout_properties: {width: 60}
     name: image_3
     properties: {height: '60'}
     type: Image
-  - layout_properties: {width: 60}
+  - event_bindings: {mouse_down: image_click}
+    layout_properties: {width: 60}
     name: image_4
     properties: {height: '60'}
     type: Image
