--- a/client_code/PoengVelger/form_template.yaml
+++ b/client_code/PoengVelger/form_template.yaml
@@ -52,10 +52,6 @@ components:
               name: aktivitet_box
               properties: {}
               type: TextBox
-            - event_bindings: {change: ikon_dropdown_change}
-              name: ikon_dropdown
-              properties: {}
-              type: DropDown
             layout_properties: {grid_position: 'YISWBH,BAXIOP'}
             name: flow_panel_2
             properties: {}
@@ -64,9 +60,9 @@ components:
           properties: {}
           type: ColumnPanel
         - event_bindings: {mouse_down: ikon_preview_mouse_down}
-          layout_properties: {width: 71.85711669921875}
+          layout_properties: {width: 110.6666259765625}
           name: ikon_preview
-          properties: {height: 61.714263916015625}
+          properties: {height: 98}
           type: Image
         layout_properties: {grid_position: 'ZFFFAT,TWLSIX'}
         name: flow_panel_4
