--- a/client_code/PoengVelger/form_template.yaml
+++ b/client_code/PoengVelger/form_template.yaml
@@ -52,10 +52,6 @@ components:
               name: aktivitet_box
               properties: {}
               type: TextBox
-            - event_bindings: {change: ikon_dropdown_change}
-              name: ikon_dropdown
-              properties: {}
-              type: DropDown
             layout_properties: {grid_position: 'YISWBH,BAXIOP'}
             name: flow_panel_2
             properties: {}
@@ -63,9 +59,10 @@ components:
           name: column_panel_2
           properties: {}
           type: ColumnPanel
-        - layout_properties: {width: 71.85711669921875}
+        - event_bindings: {mouse_down: ikon_preview_click}
+          layout_properties: {width: 120}
           name: ikon_preview
-          properties: {height: 61.714263916015625}
+          properties: {height: '120'}
           type: Image
         layout_properties: {grid_position: 'ZFFFAT,TWLSIX'}
         name: flow_panel_4
