--- a/client_code/minside/form_template.yaml
+++ b/client_code/minside/form_template.yaml
@@ -43,6 +43,10 @@ components:
     name: flow_panel_3
     properties: {align: center}
     type: FlowPanel
+  - layout_properties: {grid_position: 'TJLRKX,KLVLFH'}
+    name: rich_text_1
+    properties: {align: center, content: Team uten medlemmer blir slettet etter en stund}
+    type: RichText
   - components:
     - event_bindings: {click: angre_button_click}
       layout_properties: {}
