--- a/client_code/minside/form_template.yaml
+++ b/client_code/minside/form_template.yaml
@@ -23,7 +23,8 @@ components:
       name: flow_panel_3
       properties: {align: center}
       type: FlowPanel
-    - layout_properties: {grid_position: 'SGATUI,OPBVVQ'}
+    - components: []
+      layout_properties: {grid_position: 'SGATUI,OPBVVQ'}
       name: rich_text_2
       properties:
         align: center
@@ -55,10 +56,22 @@ components:
         name: locked
         properties: {icon: 'fa:unlock', text: '', tooltip: Låsing for nye medlemmer}
         type: Button
-      layout_properties: {grid_position: 'SANPSV,EBHPOG'}
+      layout_properties: {grid_position: 'PSOJXE,PRTTWU'}
       name: flow_panel_5
       properties: {align: center}
       type: FlowPanel
+    - layout_properties: {grid_position: 'ZRMTGO,KNQDXT'}
+      name: rich_text_2_copy
+      properties:
+        align: center
+        content: Hvis det er mer enn tre medlemmer på laget ditt kan du låse det for nye medlemmer ved å klikke på hengelåsen.
+        font_size: 8
+        spacing:
+          margin: ['0', null, '0', null]
+          padding: ['0', null, '0', null]
+        spacing_above: none
+        spacing_below: none
+      type: RichText
     layout_properties: {grid_position: 'HEYYWW,CQSZEU'}
     name: outlined_card_2
     properties: {role: elevated-card}
