Created BrukerLoggbok; Edited Resultat_individuell, Resultat_individuell.RowTemplate2, ServerModule1, endringslogg and 2 more

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -6,6 +6,7 @@ unique_ids:
     theme.css: 4XELZEEUTVXOLQDXMJPQ3IRQPNKSRQ3I
     walking.svg: '1743356575598423980038540.64557'
   forms:
+    BrukerLoggbok: '1744460650352517232657937.3233'
     Brukerveiledning: '1741809187588995716692405.3163'
     Edit_Aktivitet: '174120841888829854926899.689495'
     Loggbok: '17416872019747628714560.333982'
