--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -4,10 +4,14 @@ components:
     name: label_1
     properties: {role: headline, text: Endringslogg}
     type: Label
+  - layout_properties: {grid_position: 'LMZXMW,JKJKSY'}
+    name: text_area_9
+    properties: {text: '13/4 La til navn på ikonene som tooltip når man velger ikon. Navnet blir satt inn som beskrivelse på aktiviteten dersom den ikke er fylt ut fra før. '}
+    type: TextArea
   - layout_properties: {grid_position: 'LGAFYI,CCOHUH'}
     name: text_area_8
     properties:
-      height: 166.60000610351562
+      height: 182.66665649414062
       text: "12/4 Mulighet til å opprette team selv\npopup-melding når team slettes eller når team ikke slettes fordi det ikke var tomt for medlemmer\npopup-melding når bruker slettes\nKnapp i admin for å slette tomme team. (Vurderer å gjøre den automatisk daglig)\nLagt til hengelås som viser om team er låst. Bruker kan klikke på låsen og låse selv. Dette kan bare gjøre når det er minst tre deltagere på teamet. \nNå kan slå opp alle detaljene for alle via individuell resultatliste."
     type: TextArea
   - layout_properties: {grid_position: 'MOGSQP,UEYVNV'}
@@ -51,7 +55,6 @@ components:
       height: 355
       text: |-
         Bør kunne redigere en dag ved å klikke hvor som helst i dagen, ikke bare på poengtallet.
-        Ta med tekst fra ikon hvis det står tomt
         Notat til bruker
         Slette tomme team hver natt
         Slette team med færre enn tre hver helg
