--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -53,14 +53,7 @@ components:
     name: text_area_4
     properties:
       height: 355
-      text: |-
-        Bør kunne redigere en dag ved å klikke hvor som helst i dagen, ikke bare på poengtallet.
-        Notat til bruker
-        Slette tomme team hver natt
-        Slette team med færre enn tre hver helg
-        Lagre trekninger
-        Lage liste over de som er med i alle trekningene
-        Markere vinnere i trekningene
+      text: "Bør kunne redigere en dag ved å klikke hvor som helst i dagen, ikke bare på poengtallet.\nNotat til bruker\nSlette tomme team hver natt\nSlette team med færre enn tre hver helg\nLagre trekninger\nLage liste over de som er med i alle trekningene\nMarkere vinnere i trekningene\nData for en uke bør ikke kunne redigeres etter mandag uken etter. Da fryses uken og trekningslisten er endelig. "
     type: TextArea
   - event_bindings: {click: button_1_click}
     layout_properties: {grid_position: 'RUNMFH,GYRFVX'}
